--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             var min_pic = new Image();
             min_pic.src = "clock-assets/min.png";
             var back_pic = new Image();
-            back_pic.src = "back.png";
+            back_pic.src = "clock-assets/back.png";
             var clock_pic = new Image();
             clock_pic.src = "clock-assets/clock.png";
             var sec_pic = new Image();
