--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html><html lang="en"><head>
+    <title>AIOI cinema</title>
     <script src="p5.js"></script>
     <script src="p5.sound.min.js"></script>
     <script src="p5.gif.js" type="text/javascript"></script>
