--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html><html lang="en"><head>
-    <title>AIOI cinema</title>
-    <script src="p5.js"></script>
-    <script src="p5.sound.min.js"></script>
-    <script src="p5.gif.js" type="text/javascript"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
-    <meta charset="utf-8">
-
-  </head>
-  <body>
-    <main>
-    </main>
-    <script src="sketch.js"></script>
-  
-
-</body></html>
+<head>
+  <meta charset="utf-8">
+  <title>AIOI cinema</title>
+</head>
+<body>
+  <div id="main">
+    <span class="info">screenings happen:</span> <br>
+    <span class="info_content">every* Tuesday 20:00 <br>EKA, A101
+</span> <br>
+    <span class="info">next selection:</span> <br>
+    <span class="info_content"><i>"The wolf house" (2018)</i></span> <br>
+    <span class="info">runtime:</span> <br>
+    <span class="info_content">1h 15m</span> <br>
+  </div>
+</body>
+</html>
