--- a/index.html
+++ b/index.html
@@ -2,8 +2,11 @@
 <head>
   <meta charset="utf-8">
   <title>AIOI cinema</title>
+  <script src="../p5.min.js"></script>
+  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+  <script src="sketch.js"></script>
   <div id="main">
     <span class="info">screenings happen:</span> <br>
     <span class="info_content">every* Tuesday 20:00 <br>EKA, A101
