--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
   <script src="sketch.js"></script>
   <div id="main">
     <span class="info">screenings happen:</span> <br>
-    <span class="info_content">every* Tuesday 20:00 <br>EKA, A101
-</span> <br>
+    <span class="info_content">every* Tuesday 20:00 <br>EKA, A101 </span> <br>
     <span class="info">next selection:</span> <br>
     <span class="info_content"><i>"The wolf house" (2018)</i></span> <br>
     <span class="info">runtime:</span> <br>
     <span class="info_content">1h 15m</span> <br>
+    <div class="extras"> <a href="https://fb.me/e/1j8povpBX">fb event<a></div>
   </div>
 </body>
 </html>
