--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <script src="sketch.js"></script>
   <div id="main">
     <span class="info">screenings happen:</span> <br>
-    <span class="info_content">every* Tuesday 20:00 <br>EKA, A101 </span> <br>
+    <span class="info_content">Tuesdays 8pm <br>EKA, A101 </span> <br>
     <span class="info">next selection:</span> <br>
     <span class="info_content"><i>"The wolf house" (2018)</i></span> <br>
     <span class="info">runtime:</span> <br>
