--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+  <script scr="sketch.js"></script>
   <div id="main">
     <span class="info">screenings happen:</span> <br>
     <span class="info_content">Tuesdays 8pm <br>EKA, A101 </span> <br>
