--- a/index.html
+++ b/index.html
@@ -1,12 +1,18 @@
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>CodePen - AIOI cinema</title>
+  <link rel="stylesheet" href="./style.css">
+
+</head>
+<body>
+<!-- partial:index.partial.html -->
 <head>
   <meta charset="utf-8">
   <title>AIOI cinema</title>
-  <script src="p5.js"></script>
-  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-  <script scr="sketch.js"></script>
   <div id="main">
     <span class="info">screenings happen:</span> <br>
     <span class="info_content">Tuesdays 8pm <br>EKA, A101 </span> <br>
@@ -16,5 +22,9 @@
     <span class="info_content">1h 15m</span> <br>
     <div class="extras"> <a href="https://fb.me/e/1j8povpBX">fb event<a></div>
   </div>
+</body>
+<!-- partial -->
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/p5.min.js'></script><script  src="./script.js"></script>
+
 </body>
 </html>
