--- a/standby.html
+++ b/standby.html
@@ -1,11 +1,19 @@
-<!DOCTYPE html><html lang="en"><head>
+<!DOCTYPE html>
+<html lang="en" >
+<head>
+  <meta charset="UTF-8">
+  <title>CodePen - AIOI cinema</title>
+  <link rel="stylesheet" href="./style.css">
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/p5.min.js'></script><script  src="./script.js"></script>
+</head>
+<body>
 <head>
   <meta charset="utf-8">
   <title>AIOI cinema standby</title>
-  <script src="https://cdn.jsdelivr.net/npm/p5@1.4.1/lib/p5.min.js"></script>
-  <script scr="sketch.js"></script>
-  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
 </body>
+
+</body>
 </html>
+
