--- a/index.html
+++ b/index.html
@@ -1,20 +1,29 @@
-<!DOCTYPE html>
-<html lang="en" >
 <head>
-  <meta charset="UTF-8">
+  <meta charset="utf-8">
   <title>AIOI cinema</title>
-  <link rel="stylesheet" href="./style.css">
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/p5.min.js'></script><script  src="./script.js"></script>
 </head>
 <body>
   <div id="main">
-    <span class="info">screenings happen:</span> <br>
-    <span class="info_content">Tuesdays 8pm <br>EKA, A101 </span> <br>
-    <span class="info">next selection:</span> <br>
-    <span class="info_content"><i>"The wolf house" (2018)</i></span> <br>
-    <span class="info">runtime:</span> <br>
-    <span class="info_content">1h 15m</span> <br>
+    <div class="info_group">
+      <span class="info">current screening schedule:</span> <br>
+    </div>
+    <div class="info_group">
+      <span class="info_content">Tuesdays 8pm </span> <br>
+      <span class="info_content">EKA, A101 </span> <br>
+    </div>
+    
+    <div class="info_group">
+      <span class="info">next selection:</span> <br>
+    </div>
+    <div class="info_group">
+      <span class="info_content"><i>Akira (1988)</i></span> <br>
+    </div>
+    <div class="info_group">
+      <span class="info">runtime:</span> <br>
+    </div>
+    <div class="info_group">
+      <span class="info_content">2h 4m</span> <br>
+    </div>
     <div class="extras"> <a href="https://fb.me/e/1j8povpBX">fb event<a></div>
   </div>
 </body>
-</html>
