--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       <span class="info">current screening schedule:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content">Tuesdays 8pm </span> <br>
+      <span class="info_content">Tuesdays 7:30pm </span> <br>
       <span class="info_content">EKA, A101 </span> <br>
     </div>
     
@@ -24,6 +24,6 @@
     <div class="info_group">
       <span class="info_content">2h 4m</span> <br>
     </div>
-    <div class="extras"> <a href="https://fb.me/e/1j8povpBX">fb event<a></div>
+    <div class="extras"> <a href="https://fb.me/e/3lwpho3iv">fb event<a></div>
   </div>
 </body>
