--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
+<!DOCTYPE html>
+<html lang="en" >
 <head>
-  <meta charset="utf-8">
+  <meta charset="UTF-8">
   <title>AIOI cinema</title>
+  <link rel="stylesheet" href="./style.css">
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/p5.min.js'></script><script  src="./script.js"></script>
 </head>
 <body>
   <div id="main">
@@ -27,3 +31,4 @@
     <div class="extras"> <a href="https://fb.me/e/3lwpho3iv">fb event<a></div>
   </div>
 </body>
+</html>
