--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="info_group">
       <span class="info_content">2h 4m</span> <br>
     </div>
-    <div class="extras"> <a href="https://fb.me/e/3lwpho3iv">fb event<a></div>
+    <div class="extras"> <a href="https://fb.me/e/2eMUVtmqb">fb event<a></div>
   </div>
 </body>
 </html>
