--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
     
   <script>
   // Get the modal
-  var modal = document.getElementById("question_mark");
+  var modal = document.getElementById("myModal");
 
   // Get the button that opens the modal
-  var btn = document.getElementById("myBtn");
+  var btn = document.getElementById("question_mark");
 
   // Get the <span> element that closes the modal
   var span = document.getElementsByClassName("close")[0];
