--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <span class="info_content">2h 4m</span> <br>
     </div>
     <div class="info_group" style="margin-top: 1em;">
-    <span class="extras"> <a href="https://fb.me/e/1j8povpBX">fb event<a></span>
+    <span class="extras"> <a href="https://fb.me/e/2eMUVtmqb">fb event<a></span>
     <span class="extras"> <a href="https://docs.google.com/spreadsheets/d/19VuIHHfXWdGLnEVLMkBOQXKXy5d1tFoYGq0e9RjBQ4c/edit?usp=sharing">suggest films<a></span>
     </div>
   </div>
