--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <span class="close">&times;</span>
       <p>Initiative titled <b>AIOI cinema</b> is an invitation to participate in film screening rituals, using room A101, open to all of EKA community.</p>
       <p>Kickstarted by Aurelijus and animation department, the goal is to establish weekly tradition and foster engagement and ideas from all of EKA students. Please leave screening suggestions in the <a href="https://docs.google.com/spreadsheets/d/19VuIHHfXWdGLnEVLMkBOQXKXy5d1tFoYGq0e9RjBQ4c/edit?usp=sharing">google doc<a>. The optimal timing of screenings and choosing of films is still being worked out through experimentation. In some cases, we may arrange renting or access to some hard-to-get films with help of EKA</p>
-      <p>This webpage will be maintained and updated as details change. Write to aurelijus.ciupas@artun.ee if you want to chat about this initiative.</p>
+      <p>This webpage will be maintained and updated as details change. Write to <u>aurelijus.ciupas@artun.ee</u> if you want to chat about this initiative.</p>
     </div>
   </div>
     
