--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     </div>
     
     <div class="info_group">
-      <span class="info">next selection:</span> <br>
+      <span class="info">next selection (May 03):</span> <br>
     </div>
     <div class="info_group">
       <span class="info_content"><i>Akira (1988)</i></span> <br>
