--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <html lang="en" >
 <head>
+<meta property=’og:title’ content='AIOI cinema'/>
+<meta property=’og:image’ content='./webcover.jpg'/>
+<meta property=’og:url’ content='a101cinema.info'/>
+<meta property='og:image:width' content='1600' />
+<meta property='og:image:height' content='836' />
+<meta property="og:type" content='website'/>
+
+
   <meta charset="UTF-8">
   <title>AIOI cinema</title>
   <link rel="stylesheet" href="./style.css">
