--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta property=’og:title’ content='AIOI cinema'/>
 <meta property=’og:image’ content='http://a101cinema.info/webcover.jpg'/>
-<meta property=’og:url’ content='a101cinema.info'/>
+<meta property=’og:url’ content='http://a101cinema.info/'/>
 <meta property='og:image:width' content='1600' />
 <meta property='og:image:height' content='836' />
 <meta property="og:type" content='website'/>
