--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
   <div id="main">
     <div id="question_mark">?</div>
     <div class="info_group">
-      <span class="info">current screening schedule:</span> <br>
+      <span class="info">next screening:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content">Tuesdays 7:30pm </span> <br>
-      <span class="info_content">EKA, A101 </span> <br>
+      <span class="info_content">Tuesday (May 03) 7:30pm</span> <br>
+      <span class="info_content">EKA, A101</span> <br>
     </div>
     
     <div class="info_group">
-      <span class="info">next selection (May 03):</span> <br>
+      <span class="info">selection:</span> <br>
     </div>
     <div class="info_group">
       <span class="info_content"><i>Akira (1988)</i></span> <br>
