--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <span class="info">next screening:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content">Tuesday (May 03) 7:30pm</span> <br>
+      <span class="info_content">May 10, Tuesday, 8pm</span> <br>
       <span class="info_content">EKA, A101</span> <br>
     </div>
     
@@ -30,13 +30,13 @@
       <span class="info">selection:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content"><i>Akira (1988)</i></span> <br>
+      <span class="info_content"><i>TBD on Friday</i></span> <br>
     </div>
     <div class="info_group">
       <span class="info">runtime:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content">2h 4m</span> <br>
+      <span class="info_content">TBD</span> <br>
     </div>
     <div class="info_group" style="margin-top: 1em;">
     <span class="extras"> <a href="https://fb.me/e/2eMUVtmqb">fb event<a></span>
