--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
       <span class="info">selection:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content"><i>TBD on Friday</i></span> <br>
+      <span class="info_content"><i>The House (2022)</i></span> <br>
     </div>
     <div class="info_group">
       <span class="info">runtime:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content">TBD</span> <br>
+      <span class="info_content">1h 37m</span> <br>
     </div>
     <div class="info_group" style="margin-top: 1em;">
     <span class="extras"> <a href="https://fb.me/e/2eMUVtmqb">fb event<a></span>
