--- a/index.html
+++ b/index.html
@@ -39,8 +39,7 @@
       <span class="info_content">1h 37m</span> <br>
     </div>
     <div class="info_group" style="margin-top: 1em;">
-    <span class="extras"> <a href="https://fb.me/e/2eMUVtmqb">fb event<a></span>
-    <span class="extras"> <a href="https://docs.google.com/spreadsheets/d/19VuIHHfXWdGLnEVLMkBOQXKXy5d1tFoYGq0e9RjBQ4c/edit?usp=sharing">suggest films<a></span>
+    <span class="extras"> <a href="https://docs.google.com/spreadsheets/d/19VuIHHfXWdGLnEVLMkBOQXKXy5d1tFoYGq0e9RjBQ4c/edit?usp=sharing">suggest films (EKA accounts)<a></span>
     </div>
   </div>
       
