--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/p5.min.js'></script><script  src="./script.js"></script>
 </head>
 <body>
-  <div id="main">
-    <div id="question_mark">?</div>
+<div id="content">
+<div id="main_info">
     <div class="info_group">
       <span class="info">next screening:</span> <br>
     </div>
@@ -38,10 +38,13 @@
     <div class="info_group">
       <span class="info_content">1h 37m</span> <br>
     </div>
-    <div class="info_group" style="margin-top: 1em;">
-    <span class="extras"><a href="https://docs.google.com/spreadsheets/d/19VuIHHfXWdGLnEVLMkBOQXKXy5d1tFoYGq0e9RjBQ4c/edit?usp=sharing">suggest films (EKA accounts)<a></span>
+ </div>
+ <img id="poster" src="https://m.media-amazon.com/images/M/MV5BZWY2MWZkZmUtODExMC00N2RjLTg5ZTItNzc2Y2JlMjFhNmE3XkEyXkFqcGdeQXVyODIyOTEyMzY@._V1_.jpg"></img>
+ </div>
+ <div class="extras_group" style="margin-bottom: 1em;">
+    <span class="extras"><a href="https://docs.google.com/spreadsheets/d/19VuIHHfXWdGLnEVLMkBOQXKXy5d1tFoYGq0e9RjBQ4c/edit?usp=sharing">suggest films<br> (with EKA accounts)<a></span>
     </div>
-  </div>
+ <div id="question_mark">?</div>
       
   <div id="myModal" class="modal">
     <!-- Modal content -->
@@ -51,7 +54,7 @@
       <p>This initiative is kickstarted by Aurelijus and animation department, with a goal of making use of school screening facilities and enabling engagement from all of EKA community. Please leave screening suggestions in the <a href="https://docs.google.com/spreadsheets/d/19VuIHHfXWdGLnEVLMkBOQXKXy5d1tFoYGq0e9RjBQ4c/edit?usp=sharing">google doc<a>. The optimal timing of screenings and choosing of films is still being worked out through experimentation. In some cases, we could arrange renting or access to some hard-to-get films with the help of school.</p>
       <p>This webpage will be maintained and updated as details change. Write to <u>aurelijus.ciupas@artun.ee</u> if you want to chat about this initiative.</p>
     </div>
-  </div>
+ </div>
     
   <script>
   // Get the modal
