--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <span class="info_content">1h 37m</span> <br>
     </div>
  </div>
- <img id="poster" src="https://m.media-amazon.com/images/M/MV5BZWY2MWZkZmUtODExMC00N2RjLTg5ZTItNzc2Y2JlMjFhNmE3XkEyXkFqcGdeQXVyODIyOTEyMzY@._V1_.jpg"></img>
+ <img id="poster" src="https://assets-prd.ignimgs.com/2022/01/15/the-house-netflix-button-1642288423212.jpg"></img>
  </div>
  <div class="extras_group" style="margin-bottom: 1em;">
     <span class="extras"><a href="https://docs.google.com/spreadsheets/d/19VuIHHfXWdGLnEVLMkBOQXKXy5d1tFoYGq0e9RjBQ4c/edit?usp=sharing">suggest films<br> (with EKA accounts)<a></span>
