--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <meta property='og:image:width' content='1600' />
 <meta property='og:image:height' content='836' />
 <meta property="og:type" content='website'/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 
   <meta charset="UTF-8">
