--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <span class="info">next screening:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content">May 09, Monday, 7:30pm</span> <br>
+      <span class="info_content">May 17, Tuesday, 8pm</span> <br>
       <span class="info_content">EKA, A101</span> <br>
     </div>
     
@@ -31,16 +31,16 @@
       <span class="info">selection:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content"><i>The House (2022)</i></span> <br>
+      <span class="info_content"><i>Pina (2011)</i></span> <br>
     </div>
     <div class="info_group">
       <span class="info">runtime:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content">1h 37m</span> <br>
+      <span class="info_content">1h 43m</span> <br>
     </div>
  </div>
- <img id="poster" src="https://assets-prd.ignimgs.com/2022/01/15/the-house-netflix-button-1642288423212.jpg"></img>
+ <img id="poster" src="https://m.media-amazon.com/images/M/MV5BMTMyMTI1NDA5MV5BMl5BanBnXkFtZTcwNzM1NTY5Ng@@._V1_.jpg"></img>
  </div>
  <div class="extras_group" style="margin-bottom: 1em;">
     <span class="extras"><a href="https://docs.google.com/spreadsheets/d/19VuIHHfXWdGLnEVLMkBOQXKXy5d1tFoYGq0e9RjBQ4c/edit?usp=sharing">suggest films<br> (with EKA accounts)<a></span>
