--- a/index.html
+++ b/index.html
@@ -23,11 +23,11 @@
       <span class="info">next screening:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content">May 18, Wednesday, 7:30pm</span> <br>
-      <span class="info_content">EKA, A101</span> <br>
+      <span class="info_content">TBD</span> <br>
+      <span class="info_content">check back later for details!</span> <br>
     </div>
     
-    <div class="info_group">
+    <!-- <div class="info_group">
       <span class="info">selection:</span> <br>
     </div>
     <div class="info_group">
@@ -38,9 +38,9 @@
     </div>
     <div class="info_group">
       <span class="info_content">1h 43m</span> <br>
-    </div>
+    </div> -->
  </div>
- <img id="poster" src="https://m.media-amazon.com/images/M/MV5BMTMyMTI1NDA5MV5BMl5BanBnXkFtZTcwNzM1NTY5Ng@@._V1_.jpg"></img>
+ <img id="poster" style="display: none;" src="https://m.media-amazon.com/images/M/MV5BMTMyMTI1NDA5MV5BMl5BanBnXkFtZTcwNzM1NTY5Ng@@._V1_.jpg"></img>
  </div>
  <div class="extras_group" style="margin-bottom: 1em;">
     <span class="extras"><a href="https://docs.google.com/spreadsheets/d/19VuIHHfXWdGLnEVLMkBOQXKXy5d1tFoYGq0e9RjBQ4c/edit?usp=sharing">suggest films<br> (with EKA accounts)<a></span>
