--- a/index.html
+++ b/index.html
@@ -23,24 +23,24 @@
       <span class="info">next screening:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content">TBD</span> <br>
-      <span class="info_content">check back later for details!</span> <br>
+      <span class="info_content">Wednesday, May 25th</span> <br>
+      <span class="info_content">7:30pm, A101</span> <br>
     </div>
     
-    <!-- <div class="info_group">
+    <div class="info_group">
       <span class="info">selection:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content"><i>Pina (2011)</i></span> <br>
+      <span class="info_content"><i>Angel's Egg (1985)</i></span> <br>
     </div>
     <div class="info_group">
       <span class="info">runtime:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content">1h 43m</span> <br>
-    </div> -->
+      <span class="info_content">1h 11m</span> <br>
+    </div>
  </div>
- <img id="poster" style="display: none;" src="https://m.media-amazon.com/images/M/MV5BMTMyMTI1NDA5MV5BMl5BanBnXkFtZTcwNzM1NTY5Ng@@._V1_.jpg"></img>
+ <img id="poster" style="display: inline-block;" src="https://m.media-amazon.com/images/M/MV5BMWM2N2RjOTAtYzRkNi00NDY5LWFhODAtZWEwYjdiM2FlMjljXkEyXkFqcGdeQXVyNjUwNzk3NDc@._V1_FMjpg_UX1000_.jpg></img>
  </div>
  <div class="extras_group" style="margin-bottom: 1em;">
     <span class="extras"><a href="https://docs.google.com/spreadsheets/d/19VuIHHfXWdGLnEVLMkBOQXKXy5d1tFoYGq0e9RjBQ4c/edit?usp=sharing">suggest films<br> (with EKA accounts)<a></span>
