--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
       <span class="info_content">1h 11m</span> <br>
     </div>
  </div>
- <img id="poster" style="display: inline-block;" src="https://m.media-amazon.com/images/M/MV5BMWM2N2RjOTAtYzRkNi00NDY5LWFhODAtZWEwYjdiM2FlMjljXkEyXkFqcGdeQXVyNjUwNzk3NDc@._V1_FMjpg_UX1000_.jpg></img>
+ <img id="poster" style="display: default;" src="https://m.media-amazon.com/images/M/MV5BMWM2N2RjOTAtYzRkNi00NDY5LWFhODAtZWEwYjdiM2FlMjljXkEyXkFqcGdeQXVyNjUwNzk3NDc@._V1_FMjpg_UX1000_.jpg"></img>
  </div>
  <div class="extras_group" style="margin-bottom: 1em;">
     <span class="extras"><a href="https://docs.google.com/spreadsheets/d/19VuIHHfXWdGLnEVLMkBOQXKXy5d1tFoYGq0e9RjBQ4c/edit?usp=sharing">suggest films<br> (with EKA accounts)<a></span>
