--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <span class="info">next screening:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content">Wednesday, June 1st</span> <br>
-      <span class="info_content">8:00pm, A101</span> <br>
+      <span class="info_content">TBD</span> <br>
+      <!--<span class="info_content">at secret location</span> <br>
     </div>
     
     <div class="info_group">
@@ -37,10 +37,10 @@
       <span class="info">runtime:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content">1h 20m</span> <br>
+      <span class="info_content">1h 20m</span> <br> -->
     </div>
  </div>
- <img id="poster" style="display: default;" src="https://m.media-amazon.com/images/M/MV5BODQ4NTFjMTQtMzkyNy00ZmVhLThhMDItZWQ0OGM3N2RkNDlmXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_FMjpg_UX1000_.jpg"></img>
+ <img id="poster" style="display: none;" src="https://m.media-amazon.com/images/M/MV5BODQ4NTFjMTQtMzkyNy00ZmVhLThhMDItZWQ0OGM3N2RkNDlmXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_FMjpg_UX1000_.jpg"></img>
  </div>
  <div class="extras_group" style="margin-bottom: 1em;">
     <span class="extras"><a href="https://docs.google.com/spreadsheets/d/19VuIHHfXWdGLnEVLMkBOQXKXy5d1tFoYGq0e9RjBQ4c/edit?usp=sharing">suggest films<br> (with EKA accounts)<a></span>
