--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
     <div class="info_group">
       <span class="info_content">TBD</span> <br>
-      <!--<span class="info_content">at secret location</span> <br>
+      </div><!--<span class="info_content">at secret location</span> <br>
     </div>
     
     <div class="info_group">
