--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
       <span class="info">next screening:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content">TBD</span> <br>
-      </div><!--<span class="info_content">at secret location</span> <br>
+      <span class="info_content">AIOI cinema is on a break!</span> <br>
+      <span class="info_content">check back later, 2nd half of June.</span> <br>
     </div>
-    
+    <!--
     <div class="info_group">
       <span class="info">selection:</span> <br>
     </div>
