--- a/every_person/mockup.html
+++ b/every_person/mockup.html
@@ -51,6 +51,7 @@
   }
 </style>
 <body>
+  <img id='banner' src="https://a101cinema.info/every_person/banner.jpg"> <br>
   <div id='info'>
     <div id='profile_pic'> 
       <img  src="https://a101cinema.info/every_person/title_text.gif">
