--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
       <span class="info">next screening:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content">AIOI cinema is on a break!</span> <br>
-      <span class="info_content">check back later, 2nd half of June.</span> <br>
+      <span class="info_content">AIOI cinema is on a summer break</span> <br>
+      <span class="info_content">check back on August!</span> <br>
     </div>
     <!--
     <div class="info_group">
