--- a/a101cinema/index.html
+++ b/a101cinema/index.html
@@ -2,9 +2,9 @@
 <html lang="en" >
 <head>
 <meta property='og:title' content='AIOI cinema'/>
-<meta property='og:image' content='http://a101cinema.info/webcover.jpg'/>
-<meta property='og:image:url' content='http://a101cinema.info/webcover.jpg'/>
-<meta property='og:url' content='http://a101cinema.info/'/>
+<meta property='og:image' content='https://aulerius.github.io/a101cinema/webcover.jpg'/>
+<meta property='og:image:url' content='https://aulerius.github.io/a101cinema/webcover.jpg'/>
+<meta property='og:url' content='https://aulerius.github.io/a101cinema'/>
 <meta property='og:image:width' content='1600' />
 <meta property='og:image:height' content='836' />
 <meta property="og:type" content='website'/>
