--- a/everyperson/index.html
+++ b/everyperson/index.html
@@ -8,47 +8,58 @@
   <title>every person</title> 
 </head>
 <style>
-    body{
-    margin: 0;
-    text-align: center;
-  }
-  #info{
-    margin-bottom: 100px;
-  }
-  #banner{
-    width: 100%;
-    height: 300px;
-    object-fit: cover;
-  }
-  #profile_pic{
-    filter: drop-shadow(0px 1px 1px gray);
-    margin-top: -80px;
-  }
-  #profile_pic img{
-    width: 150px;
-    clip-path: circle(50%);
-  }
-  #title{
-    font-size: 2.4em;
-    margin: 20px;
-  }
-  #description{
-    font-size: 1.1em;
-    margin: 40px;
-  }
-  #person_container{
-    max-width: 1400px;
-    margin: auto;
-    margin-top: 20px;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    align-items: center;
-  }
-  .person{
-    width: 18%;
-    margin: 1%;
-  }
+	  body{
+	  margin: 0;
+	  text-align: center;
+	}
+	#info{
+	  margin-bottom: 70px;
+	}
+	#banner{
+	  width: 100%;
+	  height: 300px;
+	  object-fit: cover;
+	}
+	#profile_pic{
+	  filter: drop-shadow(0px 1px 1px gray);
+	  margin-top: -80px;
+	}
+	#profile_pic img{
+	  width: 150px;
+	  clip-path: circle(50%);
+	}
+	#title{
+	  font-size: 2.4em;
+	  margin: 20px;
+	}
+	#description{
+	  font-size: 1.1em;
+	  margin: 30px;
+	}
+	#disclaimer{
+	  margin: 30px;
+	  font-size: 1.4em;
+	}
+	#person_container{
+	  max-width: 1400px;
+	  margin: auto;
+	  margin-top: 20px;
+	  display: flex;
+	  flex-wrap: wrap;
+	  flex-direction: row;
+	  align-items: center;
+	}
+	.person{
+	  width: 18%;
+	  margin: 1%;
+	}
+
+	@media screen and (max-width: 992px) {
+	  .person {width: 31%; }
+	}
+	@media screen and (max-width: 680px) {
+	  .person {width: 48%; }
+	}
 </style>
 <body>
   <img id='banner' src="./banner.jpg"> <br>
@@ -64,6 +75,11 @@
       ...or could never meet <br>
       ...or maybe a humble celebration of diverse human authenticity
     </p>
+	
+	<h2 id='disclaimer'>
+	  Thank you for visiting ♡ <br>
+	...in the future this website may serve as a hub to enrich "every person" project and provide bonus material/interaction.
+	  </h2>
   </div>
 
   <div id='person_container'></div>
@@ -71,12 +87,16 @@
   <script>
     person_container = document.getElementById('person_container');
 
-    for (y = 1; y < 29; y++) {
-        var img = document.createElement("img");
-        img.src = "./" + ('00'+y).slice(-2) + ".gif";
-        img.classList.add('person');
-        person_container.appendChild(img);
-    }
+	for (y = 1; y < 29; y++) {
+		var a_img = document.createElement("a");
+		var img = document.createElement("img");
+		img.src = "https://aulerius.art/everyperson/" + ('00'+y).slice(-2) + ".gif";
+		a_img.classList.add('person');
+		a_img.href = "https://objkt.com/asset/versum_items/" + String(y);
+		person_container.appendChild(a_img);
+		a_img.appendChild(img);
+		img.style.width = "100%";
+}
   </script>
 </body>
 </html>
