--- a/a101cinema/index.html
+++ b/a101cinema/index.html
@@ -20,11 +20,11 @@
 <div id="content">
 <div id="main_info">
     <div class="info_group">
-      <span class="info">next screening:</span> <br>
+      <span class="info">screenings continue from:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content">AIOI cinema is on a summer break</span> <br>
-      <span class="info_content">check back on August!</span> <br>
+      <span class="info_content">3rd week of August</span> <br>
+      <span class="info_content">check back later for selection and time!</span> <br>
     </div>
     <!--
     <div class="info_group">
