--- a/index.html
+++ b/index.html
@@ -49,12 +49,14 @@
 <body>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
+  <div id='hello_container'>
   <p id='hello'>
   Hello! You are early. <br>
   I hope this to be my digital home eventually... <br>
   Nowadays I'm occupied with conceptualizing, building, animating, struggling, celebrating and suffering for my short animated debut film for MA thesis. <br><br>
     Until that's done, you can check my creative outputs through this <a href="https://linktr.ee/aulerius"> linktree </a>
   </p>
+  </div>
     
   <script>
     let canvas;
