--- a/a101cinema/index.html
+++ b/a101cinema/index.html
@@ -20,28 +20,27 @@
 <div id="content">
 <div id="main_info">
     <div class="info_group">
-      <span class="info">screenings continue from:</span> <br>
+      <span class="info">next screening:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content">3rd week of August</span> <br>
-      <span class="info_content">check back later for selection and time!</span> <br>
+      <span class="info_content">24th of August</span> <br>
     </div>
-    <!--
     <div class="info_group">
       <span class="info">selection:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content"><i>Buñuel in the Labyrinth of Turtles (2019)</i></span> <br>
+      <span class="info_content"><i>Ghost in the Shell (1995)</i></span> <br>
     </div>
     <div class="info_group">
       <span class="info">runtime:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content">1h 20m</span> <br> -->
+      <span class="info_content">1h 23m</span> <br>
     </div>
  </div>
- <img id="poster" style="display: none;" src="https://m.media-amazon.com/images/M/MV5BODQ4NTFjMTQtMzkyNy00ZmVhLThhMDItZWQ0OGM3N2RkNDlmXkEyXkFqcGdeQXVyMTMxODk2OTU@._V1_FMjpg_UX1000_.jpg"></img>
+ <img id="poster" src="https://imgpile.com/images/UD0wml.jpg"></img>
  </div>
+
  <div class="extras_group" style="margin-bottom: 1em;">
     <span class="extras"><a href="https://docs.google.com/spreadsheets/d/19VuIHHfXWdGLnEVLMkBOQXKXy5d1tFoYGq0e9RjBQ4c/edit?usp=sharing">suggest films<br> (with EKA accounts)<a></span>
     </div>
