--- a/a101cinema/index.html
+++ b/a101cinema/index.html
@@ -23,7 +23,7 @@
       <span class="info">next screening:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content">24th of August</span> <br>
+      <span class="info_content">Wednesday, 24th of August</span> <br>
     </div>
     <div class="info_group">
       <span class="info_content">20:00, at EKA A101</span> <br>
