--- a/a101cinema/index.html
+++ b/a101cinema/index.html
@@ -23,7 +23,7 @@
       <span class="info">next screening:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content">Wednesday, 24th of August</span> <br>
+      <span class="info_content">Wednesday, 31st of August</span> <br>
     </div>
     <div class="info_group">
       <span class="info_content">20:00, at EKA A101</span> <br>
@@ -32,16 +32,16 @@
       <span class="info">selection:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content"><i>Ghost in the Shell (1995)</i></span> <br>
+      <span class="info_content"><i>Ghost in the Shell 2: Innocence (2004)</i></span> <br>
     </div>
     <div class="info_group">
       <span class="info">runtime:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content">1h 23m</span> <br>
+      <span class="info_content">1h 39m</span> <br>
     </div>
  </div>
- <img id="poster" src="https://imgpile.com/images/UD0wml.jpg"></img>
+ <img id="poster" src="https://m.media-amazon.com/images/M/MV5BZjlkYWVlMjQtMGY3Zi00MWYxLTkxYTItODBkNGUyOWJjMjhjXkEyXkFqcGdeQXVyMTIyNzY1NzM@._V1_.jpg"></img>
  </div>
 
  <div class="extras_group" style="margin-bottom: 1em;">
