--- a/a101cinema/index.html
+++ b/a101cinema/index.html
@@ -23,7 +23,7 @@
       <span class="info">next screening:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content">Wednesday, 14th of September</span> <br>
+      <span class="info_content">Wednesday, 21th of September</span> <br>
     </div>
     <div class="info_group">
       <span class="info_content">20:00, at EKA A101</span> <br>
@@ -32,16 +32,16 @@
       <span class="info">selection:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content"><i>Persepolis (2007)</i></span> <br>
+      <span class="info_content"><i>Paprika (2006)</i></span> <br>
     </div>
     <div class="info_group">
       <span class="info">runtime:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content">1h 36m</span> <br>
+      <span class="info_content">1h 30m</span> <br>
     </div>
  </div>
- <img id="poster" src="https://m.media-amazon.com/images/M/MV5BMGRkZThmYzEtYjQxZC00OWEzLThjYjAtYzFkMjY0NGZkZWI4XkEyXkFqcGdeQXVyNTAyODkwOQ@@._V1_.jpg"></img>
+ <img id="poster" src="https://flxt.tmsimg.com/assets/p166036_p_v12_ah.jpg"></img>
  </div>
 
  <div class="extras_group" style="margin-bottom: 1em;">
