--- a/a101cinema/index.html
+++ b/a101cinema/index.html
@@ -20,13 +20,11 @@
 <div id="content">
 <div id="main_info">
     <div class="info_group">
-      <span class="info">next screening:</span> <br>
+        <span class="info">screenings every Wednesday evening at EKA A101</span> <br>
+        <span class="info">next screening:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content">Wednesday, 21th of September</span> <br>
-    </div>
-    <div class="info_group">
-      <span class="info_content">20:00, at EKA A101</span> <br>
+      <span class="info_content">21th of September, 20:00</span> <br>
     </div>
     <div class="info_group">
       <span class="info">selection:</span> <br>
@@ -54,7 +52,7 @@
     <div class="modal-content">
       <span class="close">&times;</span>
       <p><b>"AIOI cinema"</b> is an invitation to partake in regular rituals of experiencing film in our very own cinema room, the A101, or AIOI "ayaoi", or AlOl "alol".</p>
-      <p>This initiative is kickstarted by Aurelijus and animation department, with a goal of making use of school screening facilities and enabling engagement from all of EKA community. Please leave screening suggestions in the <a href="https://docs.google.com/spreadsheets/d/19VuIHHfXWdGLnEVLMkBOQXKXy5d1tFoYGq0e9RjBQ4c/edit?usp=sharing">google doc<a>. The optimal timing of screenings and choosing of films is still being worked out through experimentation. In some cases, we could arrange renting or access to some hard-to-get films with the help of school.</p>
+      <p>This initiative is kickstarted by Aurelijus and animation department, with a goal of making use of school screening facilities and enabling engagement from all of EKA community. Please leave screening suggestions in the <a href="https://docs.google.com/spreadsheets/d/19VuIHHfXWdGLnEVLMkBOQXKXy5d1tFoYGq0e9RjBQ4c/edit?usp=sharing">google doc<a>. In some cases, we could arrange renting or access to some hard-to-get films with the help of school.</p>
       <p>This webpage will be maintained and updated as details change. Write to <u>aurelijus.ciupas@artun.ee</u> if you want to chat about this initiative.</p>
     </div>
  </div>
