--- a/a101cinema/index.html
+++ b/a101cinema/index.html
@@ -20,7 +20,9 @@
 <div id="content">
 <div id="main_info">
     <div class="info_group">
-        <span class="info">screenings every Wednesday evening at EKA A101</span> <br>
+        <span class="info_content">screenings every Wednesday evening at EKA A101</span> <br>
+    </div>
+    <div class="info_group">
         <span class="info">next screening:</span> <br>
     </div>
     <div class="info_group">
