--- a/a101cinema/index.html
+++ b/a101cinema/index.html
@@ -26,22 +26,22 @@
         <span class="info">next screening:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content">21th of September, 20:00</span> <br>
+      <span class="info_content">28th of September, 20:00</span> <br>
     </div>
     <div class="info_group">
       <span class="info">selection:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content"><i>Paprika (2006)</i></span> <br>
+      <span class="info_content"><i>Mustang (2015)</i></span> <br>
     </div>
     <div class="info_group">
       <span class="info">runtime:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content">1h 30m</span> <br>
+      <span class="info_content">1h 37m</span> <br>
     </div>
  </div>
- <img id="poster" src="https://flxt.tmsimg.com/assets/p166036_p_v12_ah.jpg"></img>
+ <img id="poster" src="https://m.media-amazon.com/images/M/MV5BMTkwODUzODA0OV5BMl5BanBnXkFtZTgwMTA3ODkxNzE@._V1_.jpg"></img>
  </div>
 
  <div class="extras_group" style="margin-bottom: 1em;">
