--- a/a101cinema/standby.html
+++ b/a101cinema/standby.html
@@ -6,7 +6,24 @@
   <link rel="stylesheet" href="./style.css">
   <script src='https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/p5.min.js'></script><script  src="./script.js"></script>
 </head>
+<style>
+  #top_left{
+    position: absolute;
+    font-size: 2.5em;
+    top: 1em;
+    left: 1em;
+  }
+  #bottom_right{
+    position: absolute;
+    font-size: 2.5em;
+    bottom: 1em;
+    right: 1em;
+  }
+  </style>
 <body>
+  <div id="top_left"> screenings every wednesday evening </div>
+  <div id="bottom_right"> a101cinema.info </div>
+  
 </body>
 </html>
 
