--- a/a101cinema/standby.html
+++ b/a101cinema/standby.html
@@ -12,12 +12,16 @@
     font-size: 2.5em;
     top: 1em;
     left: 1em;
+    color: white;
+     z-index: 99;
   }
   #bottom_right{
     position: absolute;
     font-size: 2.5em;
     bottom: 1em;
     right: 1em;
+    color: white;
+    z-index: 99;
   }
   </style>
 <body>
