--- a/a101cinema/standby.html
+++ b/a101cinema/standby.html
@@ -9,7 +9,8 @@
 <style>
   #top_left{
     position: absolute;
-    font-size: 2.5em;
+    font-size: 4em;
+    font-style: sans-reif;
     top: 1em;
     left: 1em;
     color: white;
@@ -17,7 +18,8 @@
   }
   #bottom_right{
     position: absolute;
-    font-size: 2.5em;
+    font-size: 4em;
+    font-style: sans-reif;
     bottom: 1em;
     right: 1em;
     color: white;
