--- a/a101cinema/standby.html
+++ b/a101cinema/standby.html
@@ -7,28 +7,17 @@
   <script src='https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.4.1/p5.min.js'></script><script  src="./script.js"></script>
 </head>
 <style>
-  #top_left{
+  .misc_text{
     position: absolute;
     font-size: 4em;
-    font-style: sans-reif;
-    top: 1em;
-    left: 1em;
-    color: white;
-     z-index: 99;
-  }
-  #bottom_right{
-    position: absolute;
-    font-size: 4em;
-    font-style: sans-reif;
-    bottom: 1em;
-    right: 1em;
+    font-style: Arial, sans-serif;
     color: white;
     z-index: 99;
   }
   </style>
 <body>
-  <div id="top_left"> screenings every wednesday evening </div>
-  <div id="bottom_right"> a101cinema.info </div>
+  <div class="misc_text" style="bottom:1em; left:1em;"> screenings every wednesday evening </div>
+  <div class="misc_text" style="bottom:1em; right:1em;"> a101cinema.info </div>
   
 </body>
 </html>
