--- a/a101cinema/standby.html
+++ b/a101cinema/standby.html
@@ -9,8 +9,8 @@
 <style>
   .misc_text{
     position: absolute;
-    font-size: 4em;
-    font-style: Arial, sans-serif;
+    font-size: 4%;
+    font-family: Arial, sans-serif;
     color: white;
     z-index: 99;
   }
