--- a/a101cinema/standby.html
+++ b/a101cinema/standby.html
@@ -9,15 +9,15 @@
 <style>
   .misc_text{
     position: absolute;
-    font-size: 250%;
+    font-size: 5vmin;
     font-family: Arial, sans-serif;
     color: white;
     z-index: 99;
   }
   </style>
 <body>
-  <div class="misc_text" style="bottom:1%; left:1%;"> screenings every wednesday evening </div>
-  <div class="misc_text" style="bottom:1%; right:1%;"> a101cinema.info </div>
+  <div class="misc_text" style="bottom:1vmin; left:1vmin;"> screenings every Wednesday evening </div>
+  <div class="misc_text" style="bottom:1vmin; right:1vmin;"> a101cinema.info </div>
   
 </body>
 </html>
