--- a/a101cinema/index.html
+++ b/a101cinema/index.html
@@ -44,10 +44,10 @@
  <img id="poster" src="https://m.media-amazon.com/images/M/MV5BYzFjMThiMGItOWRlMC00MDI4LThmOGUtYTNlZGZiYWI1YjMyXkEyXkFqcGdeQXVyMjUzOTY1NTc@._V1_.jpg"></img>
  </div>
 
- <div class="extras_group" style="margin-bottom: 1em;">
-    <span class="extras"><a href="https://docs.google.com/spreadsheets/d/19VuIHHfXWdGLnEVLMkBOQXKXy5d1tFoYGq0e9RjBQ4c/edit?usp=sharing">suggest films<br> (with EKA accounts)<a></span>
-    </div>
- <div id="question_mark">?</div>
+  <div class="extras_group" style="margin-bottom: 1em;">
+    <a class="colorshift" href="https://docs.google.com/spreadsheets/d/19VuIHHfXWdGLnEVLMkBOQXKXy5d1tFoYGq0e9RjBQ4c/edit?usp=sharing">suggest films<br> (with EKA accounts)<a>
+  </div>
+  <div id="question_mark"><span class=colorshift>?</span></div>
       
   <div id="myModal" class="modal">
     <!-- Modal content -->
