--- a/a101cinema/index.html
+++ b/a101cinema/index.html
@@ -26,21 +26,21 @@
         <span class="info">next screening:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content">05th of October, 20:00</span> <br>
+      <span class="info_content">12th of October, 20:00</span> <br>
     </div>
     <div class="info_group">
       <span class="info">selection:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content"><i>Pan's Labyrinth (2006)</i></span> <br>
+      <span class="info_content"><i>Revealed soon!</i></span> <br>
     </div>
-    <div class="info_group">
+    <div class="info_group style="display: none;">
       <span class="info">runtime:</span> <br>
     </div>
-    <div class="info_group">
-      <span class="info_content">1h 58m</span> <br>
+    <div class="info_group" style="display: none;">
+      <span class="info_content">...</span> <br>
     </div>
- </div>
+ </div style="display: none;">
  <img id="poster" src="https://m.media-amazon.com/images/M/MV5BYzFjMThiMGItOWRlMC00MDI4LThmOGUtYTNlZGZiYWI1YjMyXkEyXkFqcGdeQXVyMjUzOTY1NTc@._V1_.jpg"></img>
  </div>
 
