--- a/a101cinema/index.html
+++ b/a101cinema/index.html
@@ -40,8 +40,8 @@
     <div class="info_group" style="display: none;">
       <span class="info_content">...</span> <br>
     </div>
- </div style="display: none;">
- <img id="poster" src="https://m.media-amazon.com/images/M/MV5BYzFjMThiMGItOWRlMC00MDI4LThmOGUtYTNlZGZiYWI1YjMyXkEyXkFqcGdeQXVyMjUzOTY1NTc@._V1_.jpg"></img>
+ </div >
+ <img id="poster" style="display: none;" src="https://m.media-amazon.com/images/M/MV5BYzFjMThiMGItOWRlMC00MDI4LThmOGUtYTNlZGZiYWI1YjMyXkEyXkFqcGdeQXVyMjUzOTY1NTc@._V1_.jpg"></img>
  </div>
 
   <div class="extras_group" style="margin-bottom: 1em;">
