--- a/a101cinema/index.html
+++ b/a101cinema/index.html
@@ -32,16 +32,16 @@
       <span class="info">selection:</span> <br>
     </div>
     <div class="info_group">
-      <span class="info_content"><i>Revealed soon!</i></span> <br>
+      <span class="info_content"><i>Mind Game (2004)</i></span> <br>
     </div>
-    <div class="info_group style="display: none;">
+    <div class="info_group">
       <span class="info">runtime:</span> <br>
     </div>
-    <div class="info_group" style="display: none;">
-      <span class="info_content">...</span> <br>
+    <div class="info_group">
+      <span class="info_content">1h 43m</span> <br>
     </div>
  </div >
- <img id="poster" style="display: none;" src="https://m.media-amazon.com/images/M/MV5BYzFjMThiMGItOWRlMC00MDI4LThmOGUtYTNlZGZiYWI1YjMyXkEyXkFqcGdeQXVyMjUzOTY1NTc@._V1_.jpg"></img>
+ <img id="poster" src="https://m.media-amazon.com/images/M/MV5BNzFlMDI1ZjctMzgzYy00YmVkLTlmMTMtNDZmZmVmMzk3MzNhXkEyXkFqcGdeQXVyMTA1OTEwNjE@._V1_.jpg"></img>
  </div>
 
   <div class="extras_group" style="margin-bottom: 1em;">
